feature-templates/nCino/dataset/01yO3G1U-Product Hierarchy/.store/metadata/objects/LLC_BI__Pricing_Option__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__APR__c</fullName>
        <description>This percent field is optional and is calculated by Sherman during the Retail Loan Workflow. It populates with the Annual Percentage Rate.</description>
        <label>APR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this lookup field with the relationship to which the quick price relates.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adjustment_Comments__c</fullName>
        <description>Users populate this optional text field with comments related to the rate adjustment. By default, it is blank.</description>
        <inlineHelpText>Use this field to note any comments related to the rate adjustment.</inlineHelpText>
        <label>Adjustment Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adjustment_Frequency__c</fullName>
        <description>This field indicates the adjustment frequency for and adjustable rate loan in months.</description>
        <label>Adjustment Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adjustment_Reason__c</fullName>
        <description>Users populate this required field with the reason for the rate adjustment. By default, it is blank.</description>
        <inlineHelpText>Select the reason for the rate adjustment.</inlineHelpText>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Adjustment</fullName>
                </value>
                <value>
                    <fullName>Additional Cross Product Sell</fullName>
                </value>
                <value>
                    <fullName>Customer Loyalty</fullName>
                </value>
                <value>
                    <fullName>Market Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortization_Notes__c</fullName>
        <description>This field indicates any notes about the Amortization Schedule (e.g. interest only periods, non-linear amortization, etc.)</description>
        <label>Amortization Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortization__c</fullName>
        <description>This field indicates the number of months over which the loan is amortized</description>
        <label>Amortization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Financed__c</fullName>
        <description>The system automatically populates this field to display the Regulation Z amount of credit provided to the borrower or on the borrower’s behalf. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount of credit provided to the borrower.</inlineHelpText>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field indicates the amount of the loan</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Fees__c</fullName>
        <description>This field indicates the annual fees associated with the loan</description>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Applied_Date__c</fullName>
        <description>Date that this pricing option was applied to a loan.</description>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Assets__c</fullName>
        <description>The system populates the scenario financial statement Average Assets. By default, it is blank.</description>
        <label>Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Equity__c</fullName>
        <description>The system populates the scenario financial statement Average Equity. By default, it is blank.</description>
        <label>Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Yield__c</fullName>
        <description>This field indicates the average interest income divided by the average outstanding assets</description>
        <formula>IF( LLC_BI__Average_Assets__c &gt; 0,  LLC_BI__Interest_Income__c /  LLC_BI__Average_Assets__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Yield</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CalculatedEffectiveLoanToValue__c</fullName>
        <description>This field indicates the PrecisionLender Scenario Financial Statement Loan Effective LTV.</description>
        <label>Effective LTV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculated_Balloon_Amount__c</fullName>
        <description>This field represents the value of the balloon amount as calculated via a payment structure.</description>
        <inlineHelpText>Balloon amount calculated via a payment structure.</inlineHelpText>
        <label>Calculated Balloon Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculated_Balloon_Principal_Amount__c</fullName>
        <description>The system automatically populates this optional currency field to specify the principal portion of a calculated balloon amount. By default, it is blank.</description>
        <inlineHelpText>This system-populated field indicates the principal portion of a calculated balloon amount.</inlineHelpText>
        <label>Calculated Balloon Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Caps_Floors_Summary__c</fullName>
        <description>This field is a simple text summary of any Caps &amp; Floors. Only relevant for Floating or Adjustable Loans</description>
        <label>Caps &amp; Floors Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_to_Close__c</fullName>
        <description>The system auto-populates this currency field to display the total cash to close amount the borrower will pay. By default, this field is based on a calculated value.</description>
        <inlineHelpText>This field displays the predetermined total cash to close value.</inlineHelpText>
        <label>Cash to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Changes_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the changes have been approved.</description>
        <label>Changes Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closing_Costs__c</fullName>
        <description>The system automatically populates this currency field to capture the borrower’s total closing costs. By default, this field is based on a calculated value.</description>
        <inlineHelpText>This field displays the total closing costs value.</inlineHelpText>
        <label>Closing Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field allows users to enter in comments about a specific Pricing Scenario. For example, why it is priced at an exception.</description>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Name__c</fullName>
        <description>Name of the competitor for competitive scenario</description>
        <label>Competitor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DTI__c</fullName>
        <description>This percent field auto-populates with debt to income (DTI) ratio after the monthly payment is calculated.</description>
        <label>Debt to Income Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Data_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the Data Snapshot Record ID.</description>
        <label>Data Snapshot</label>
        <referenceTo>nFORCE__Data_Snapshot__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Life__c</fullName>
        <description>This field indicates the expected life of the loan in months.</description>
        <label>Expected Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Aggregate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system autopopulates this lookup field with the fee loan aggregate.</description>
        <label>Fee Aggregate</label>
        <referenceTo>LLC_BI__Fee_Loan_Aggregate__c</referenceTo>
        <relationshipLabel>Pricing Option</relationshipLabel>
        <relationshipName>Pricing_Option</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fees__c</fullName>
        <description>This currency field is optional. It indicates the total amount of fees financed associated with this pricing option.</description>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Final_Payment_Amount__c</fullName>
        <description>The system automatically populates this currency field to capture the final payment amount at the end of the loan term. By default, this field does not populate until Sherman calculates the total monthly payment.</description>
        <inlineHelpText>This field displays the final payment amount at the end of the loan term.</inlineHelpText>
        <label>Final Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Finance_Charge__c</fullName>
        <description>The system automatically populates this field to display the Regulation Z amount the credit costs to borrow. By default, this field is blank.</description>
        <inlineHelpText>This field displays the cost of credit to the borrower.</inlineHelpText>
        <label>Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fixed_Period__c</fullName>
        <description>This field indicates the initial fixed period for an Adjustable Rate Loan, as such it is only applicable when the Rate Type is Adjustable.</description>
        <label>Fixed Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fixed_Rate_Lock_Summary__c</fullName>
        <description>This field indicates the Summary of Rate or Spreadlock.</description>
        <label>Fixed Rate Lock Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_APOR_Effective_Date__c</fullName>
        <description>The system automatically populates this field with the effective date of the FFIEC APOR Index referenced for High-Cost Mortgage. By default, this field is blank.</description>
        <inlineHelpText>This field displays the effective date of the APOR Index used to complete HCM compliance calculations for an offer.</inlineHelpText>
        <label>HCM APOR Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_APOR_Spread__c</fullName>
        <description>The system automatically populates this field with the High-Cost Mortgage percentage rate-spread defined by the FFIEC. By default, this field is blank.</description>
        <inlineHelpText>This field displays the HCM rate-spread for an offer.</inlineHelpText>
        <label>HCM APOR Spread</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_APOR_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate the APR for an offer exceeds High-Cost Mortgage APOR plus spread. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if the APR for an offer exceeds HCM APOR plus spread.</inlineHelpText>
        <label>HCM APOR Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_APOR__c</fullName>
        <description>The system automatically populates this field with the Average Prime Offer Rate percentage when compliance calculations are completed for High-Cost Mortgage. By default, this field is blank.</description>
        <inlineHelpText>This field displays the APOR for an offer when HCM compliance calculations are completed.</inlineHelpText>
        <label>HCM APOR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_Maximum_Points_And_Fees__c</fullName>
        <description>The system automatically populates this field to indicate the maximum points and fees an offer can have before it qualifies as High-Cost Mortgage. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the HCM maximum points and fees for an offer.</inlineHelpText>
        <label>HCM Maximum Points and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_Points_And_Fees_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate the points and fees for an offer exceeds High-Cost Mortgage maximum points and fees. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if the points and fees for an offer exceeds HCM maximum points and fees.</inlineHelpText>
        <label>HCM Points and Fees Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_APOR_Effective_Date__c</fullName>
        <description>The system automatically populates this field with the effective date of the FFIEC APOR Index referenced for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the effective date of the APOR Index used to complete HPML compliance calculations for an offer.</inlineHelpText>
        <label>HPML APOR Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_APOR_Spread__c</fullName>
        <description>The system automatically populates this field with the Higher-Priced Mortgage Loan percentage rate-spread defined by the FFIEC. By default, this field is blank.</description>
        <inlineHelpText>This field displays the HPML rate-spread for an offer.</inlineHelpText>
        <label>HPML APOR Spread</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_APOR__c</fullName>
        <description>The system automatically populates this field with the Average Prime Offer Rate percentage when compliance calculations are completed for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the APOR for an offer when HPML compliance calculations are completed.</inlineHelpText>
        <label>HPML APOR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Value__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix.</description>
        <inlineHelpText>This system-populated field displays the current index value percentage.</inlineHelpText>
        <label>Index Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This field indicates the Index Name for Floating and Adjustable Rate loans (e.g. Prime, 1M LIBOR, etc.)</description>
        <label>Index</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Fees_Currency__c</fullName>
        <description>This field indicates the fixed dollar portion of the initial fees.</description>
        <label>Initial Fees ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Fees_Text__c</fullName>
        <description>This field indicates the initial fees related to the loan</description>
        <formula>TEXT( ROUND( LLC_BI__Initial_Fees__c * 100,2)) &amp; &quot;% + &quot; &amp;

			&quot;$&quot; &amp;
			IF(
			LLC_BI__Initial_Fees_Currency__c &gt;= 1000000,
			TEXT(FLOOR( LLC_BI__Initial_Fees_Currency__c / 1000000)) &amp; &quot;,&quot;,
			&quot;&quot;) &amp;
			IF(
			LLC_BI__Initial_Fees_Currency__c &gt;= 1000,
			RIGHT(TEXT(FLOOR(LLC_BI__Initial_Fees_Currency__c/ 1000)), 3) &amp; &quot;,&quot;,
			&quot;&quot;) &amp;
			RIGHT(TEXT(FLOOR(LLC_BI__Initial_Fees_Currency__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Fees__c</fullName>
        <description>This field indicates the percentage portion of the initial fees.</description>
        <label>Initial Fees (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate__c</fullName>
        <description>This field indicates the initial interest rate of the loan</description>
        <label>Initial Rate</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Insurance__c</fullName>
        <description>The system automatically populates this currency field to display the monthly insurance cost for the borrower. By default, this field is based on a calculated value.</description>
        <inlineHelpText>This field displays the borrower’s monthly insurance cost.</inlineHelpText>
        <label>Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Expense__c</fullName>
        <description>The system populates the scenario financial statement Interest Expense. By default, it is blank.</description>
        <label>Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Income__c</fullName>
        <description>The system populates the scenario financial statement Interest Income. By default, it is blank.</description>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Options__c</fullName>
        <description>This system populates this field with a summary of the Interest Options, such as Payment Frequency. By default, it is blank.</description>
        <label>Interest Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Adjustment_Frequency__c</fullName>
        <description>The system automatically populates this optional field. It is used to specify how often an interest rate will be updated.</description>
        <inlineHelpText>The system automatically populates this field. It is used to specify how often an interest rate will be updated.</inlineHelpText>
        <label>Interest Rate Adjustment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Semimonthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix. The system adds this percentage to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This system-populated field displays the percentage that the system adds to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_HCM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate that an offer qualifies as a High-Cost Mortgage. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if an offer qualifies as HCM.</inlineHelpText>
        <label>Is HCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_HPML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate that an offer qualifies as a Higher-Priced Mortgage Loan. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if an offer qualifies as HPML.</inlineHelpText>
        <label>Is HPML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Pipeline_Scenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this scenario be the one to represent the Opportunity in Pipeline calculations?</description>
        <label>Is Pipeline Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Rate_Optimized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this checkbox to indicate to the system that it must determine the optimized rate based on the other loan inputs on the record upon calculating/recalculating profitability.</description>
        <inlineHelpText>The system uses a profitability calculator to determine the rate that will maximize the return of this scenario.</inlineHelpText>
        <label>nIQ Rate Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Renewal_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the loan is a renewal loan</description>
        <label>Is Renewal Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this boolean field to indicate whether a user has selected a pricing scenario to associate to a loan.</description>
        <label>Is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Amount__c</fullName>
        <description>This currency field is optional. It represents the amount of the loan for this pricing option.</description>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Average_Balance__c</fullName>
        <description>The system populates the scenario financial statement Loan Average Balance. By default, it is blank.</description>
        <label>Loan Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Commitment__c</fullName>
        <description>The system populates the scenario financial statement Loan Commitment. By default, it is blank.</description>
        <label>Loan Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Gross_Funding__c</fullName>
        <description>The system populates the scenario financial statement Loan Gross Funding. By default, it is blank.</description>
        <label>Loan Gross Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Loss_Reserves__c</fullName>
        <description>The system populates the scenario financial statement Loan Loss Reserves. By default, it is blank.</description>
        <label>Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Net_Commitment__c</fullName>
        <description>The system populates this field to indicate the scenario financial statement Target ROA. By default, it is blank.</description>
        <label>Loan Net Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Net_Funding__c</fullName>
        <description>The system populates the scenario financial statement Loan Net Funding. By default, it is blank.</description>
        <label>Loan Net Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This lookup field auto-populates to reference the loan to which this pricing option relates.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MAPR__c</fullName>
        <description>The system automatically populates this optional field with a Military APR Sherman calculates when the MLA Status flag is set to true.</description>
        <inlineHelpText>The system automatically populates this optional field with a Military APR Sherman calculates when the MLA Status flag is set to true.</inlineHelpText>
        <label>MAPR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MLA_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when using the pricing option.</description>
        <inlineHelpText>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when using the pricing option.</inlineHelpText>
        <label>MLA Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Matrix__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this lookup field that references the Matrix field in context. This field acts as an audit for the Matrix that determines the Pricing Option offers for the borrower.</description>
        <inlineHelpText>The system automatically enters the audit lookup.</inlineHelpText>
        <label>Matrix</label>
        <referenceTo>LLC_BI__Matrix__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>This date field represents when the loan will reach maturity.</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity__c</fullName>
        <description>This field indicates the contract maturity of the loan.</description>
        <label>Maturity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this field to indicate the memo linked to the pricing scenario. By default, it is blank.</description>
        <label>Memo</label>
        <referenceTo>LLC_BI__Credit_Memo_Modifcation__c</referenceTo>
        <relationshipLabel>Pricing_Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Payment__c</fullName>
        <description>This currency field auto-populates after pricing option calculations. It indicates the monthly payment associated to the product for this pricing option.</description>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_Insurance__c</fullName>
        <description>The system automatically populates this currency field to display the borrower’s monthly mortgage insurance rate. By default, this field is based on a calculated value.</description>
        <inlineHelpText>This field displays the borrower’s monthly mortgage insurance rate.</inlineHelpText>
        <label>Mortgage Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Income__c</fullName>
        <description>The system populates the scenario financial statement Net Income. By default, it is blank.</description>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Interest_Income__c</fullName>
        <description>The system populates the scenario financial statement Net Interest Income. By default, it is blank.</description>
        <label>Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Interest_Margin__c</fullName>
        <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets</description>
        <formula>IF( LLC_BI__Average_Assets__c &gt; 0, LLC_BI__Interest_Income__c /  LLC_BI__Average_Assets__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Interest Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Interest_Expense__c</fullName>
        <description>The system populates the scenario financial statement Non Interest Expense. By default, it is blank.</description>
        <label>Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Odd_Days__c</fullName>
        <description>The system automatically populates this optional number field to determine the number of odd days between closing and first payment. By default, it is blank.</description>
        <inlineHelpText>The number of days accumulating odd interest between closing and first payment.</inlineHelpText>
        <label>Number of Odd Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>